# vindex

./: .gitignore  PLAN.md  README.md  pyproject.toml
acceptance/: criterion3_queries.json  run_criterion3.py
src/vindex/: __init__.py  cli.py  config.py  ffmpeg_utils.py  jobs.py  models.py  pipeline.py  search.py  storage.py
src/vindex/stages/: __init__.py  caption.py  embed.py  frames.py  ingest.py  shots.py  transcribe.py  word_align.py
tests/: test_caption_parallel.py  test_embed_audio.py  test_embed_reuse.py  test_frames_candidates.py  test_pipeline_overlap.py  test_word_align.py
